--- a/styles.css
+++ b/styles.css
@@ -82,24 +82,29 @@ body {
 #nav {
     width: 100%;
     height: 100px;
-    /* background-color: blue; */
     padding-right: 10%;
     padding-left: 10%;
     display: flex;
     align-items: center;
+    position: fixed;
+    top: 0;
     justify-content: space-between;
+    background-color: #f5f5f5;
+    z-index: 999;
+
 }
 
 /* designing main section  */
 
 #main {
     width: 100%;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 180px);
     /* background-color: aqua; */
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    margin-top: 100px;
 }
 
 
@@ -178,30 +183,49 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+/* designing overlay */
+
+#overlay{
+    display: block;
+    width: 100vw;
+    min-height: 90vh;
+    position: absolute;
+    right: -120vw;
+    top: 100px;
+    background-color: black;
+    transition: 50ms right ease-in;
+    z-index: 100;
+    border-top-right-radius:2rem;
+    border-top-left-radius:2rem;
+    padding-top: 50px;
+}
 
 #overlay-history{
-    margin: 0;
-    display: none;
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
+    display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     row-gap: 20px;
-    position: absolute;
-    top: 100px;
-    box-sizing: border-box;
+    background-color: black;
+    padding-bottom: 100px;
 }
-
+#overlay-history-note{
+    display: none;
+    color: white;
+    width: fit-content;
+    margin: auto;
+}
 .grid-history-item{
     width: 280px;
     min-height: 350px;
-    border-radius: 30px;
+    /* border-radius: 30px; */
     padding: 45px 25px;
-    background-color: #8080804d;
+    background-color: #f5f5f5;
     text-align: justify;
+    overflow: hidden;
     position: relative;
     top: 0;
-    overflow: hidden;
     /* transition: 0.8s visibility ease-in-out; */
 }
 .fa-trash-can{
@@ -220,7 +244,10 @@ footer{
     margin: 0;
     position: fixed;
     bottom: 0;
-    background-color: #808080;
+    z-index: 999;
+    background-color: #8FBC8F;
+    border-top-right-radius: 3rem;
+    border-top-left-radius: 3rem;
 
 }
 
@@ -264,12 +291,7 @@ footer{
     margin-right: 9px;
 }
 
-#overlay-history-note{
-    display: none;
-    color: grey;
-    width: fit-content;
-    margin: auto;
-}
+
 
 #main-error-section{
     display: none;
@@ -279,6 +301,9 @@ footer{
 }
 
 
+
+
+
 @media (max-width:540px){
     #nav{
         padding-left: 2%;
@@ -286,6 +311,9 @@ footer{
     }
     #nav-logo-text-heading{
         font-size: 18px;
+    }
+    #nav-history-button{
+        background-color: black;
     }
 }
 
